# lockbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  README.md  test
.github/workflows/: issues.yml  release.yml  rust.yaml  rust.yml
src/: lib.rs  main.rs
src/cli/: actions.rs  args.rs  commands.rs  io.rs  mod.rs
src/crypto/: mod.rs
src/logger/: mod.rs
src/pass/: mod.rs
src/repl/: mod.rs
src/store/: README.md  mod.rs
