[package]
name = "lockbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
passwords = "3.1.13"
ring = "0.16.20"
rpassword = "7.2.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
