[package]
name = "lock_box"
description = "A command-line tool for generating and managing passwords."
version = "0.1.0"
authors = ["SonuBardai <sonubardai9@gmail.com>"]
edition = "2021"
readme = "README.md"

[[bin]]
name = "lockbox"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.2"
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0.4"
passwords = "3.1.13"
ring = "0.16.20"
rpassword = "7.2.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
terminal_size = "0.2.6"
clipboard = "0.5.0"

[dev-dependencies]
mockall = "0.11.4"
rstest = "0.18.1"
tempfile = "3.7.0"
